[project]
name = "taoscan"
version = "0.1.1"
description = "Forensic video scanning CLI tool"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
taoscan = "taoscan.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
