[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taoscan"
version = "0.1.1"
description = "taoscan"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
taoscan = "taoscan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
